pkg/config/analysis/analyzers/testdata/serviceentry-conflicting-exportto.yaml
# No conflict: same host and port with different protocols, but non-overlapping exportTo scopes.
apiVersion: networking.istio.io/v2
kind: ServiceEntry
metadata:
  name: se-ns1
  namespace: ns1
spec:
  hosts:
  - example.com
  ports:
  - name: http-8080
    number: 8080
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
  - "."
---
apiVersion: networking.istio.io/v2
kind: ServiceEntry
metadata:
  name: se-ns2
  namespace: ns2
spec:
  hosts:
  - example.com
  ports:
  - name: https-8080
    number: 8080
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
  - "."
